<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:scaleType="centerCrop"
            android:src="@drawable/coloradowolfcreekpass" />

        <TextView
            style="@style/ViewFormat.BusinessName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_blurbs_title" />

        <TextView
            style="@style/ViewFormat.HomePage.Section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_blurb_colorado_title" />

        <TextView
            style="@style/ViewFormat.HomePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/app_blurb_colorado" />

        <TextView
            style="@style/ViewFormat.HomePage.Section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_blurb_denver_title" />

        <TextView
            style="@style/ViewFormat.HomePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/app_blurb_denver" />

    </LinearLayout>

</FrameLayout>
